create depth texture

--- a/src/assets/scss/layouts/_webgl.scss
+++ b/src/assets/scss/layouts/_webgl.scss
@@ -2,8 +2,7 @@
 
 #webgl {
   position: fixed;
-  top: 0;
-  left: 0;
+  inset: 0;
   z-index: -1;
   user-select: none;
   // pointer-events: none;
