--- a/src/includes/components/drawer-button.html
+++ b/src/includes/components/drawer-button.html
@@ -1,4 +1,4 @@
 <button class="drawer-button">
-  <div class="drawer-button__text--menu">menu</div>
+  <div class="drawer-button__text--menu _en">sns</div>
   <div class="drawer-button__text--close">close</div>
 </button>
