--- a/src/includes/globals/drawer-nav.html
+++ b/src/includes/globals/drawer-nav.html
@@ -2,10 +2,20 @@
   <div class="drawer-nav__inner">
     <ul class="drawer-nav__list">
       <li class="drawer-nav__list__item">
-        <a class="drawer-nav__list__item__link" href="/"> home </a>
+        <a
+          class="drawer-nav__list__item__link"
+          href="https://github.com/yukaorange/depth-texture-for-geometry__akella"
+        >
+          github
+        </a>
       </li>
       <li class="drawer-nav__list__item">
-        <a class="drawer-nav__list__item__link" href="/"> sns </a>
+        <a
+          class="drawer-nav__list__item__link"
+          href="https://twitter.com/webcreaterfrm30"
+        >
+          X(twitter)
+        </a>
       </li>
     </ul>
     <button class="drawer-nav__close">close</button>
