--- a/src/includes/globals/header.html
+++ b/src/includes/globals/header.html
@@ -1,9 +1,9 @@
 <header class="header">
   <nav class="navigation">
     <ul class="navigation__list">
-      <li class="navigation__list__item">
+      <!-- <li class="navigation__list__item">
         <a href="/" class="navigation__list__item__link"> home </a>
-      </li>
+      </li> -->
     </ul>
   </nav>
 </header>
